# first_kurs

./: .flake8  README.md  env.exsample  pyproject.toml  requirements.txt
data/: operations.xlsx
htmlcov/: index.html
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
