[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "admin",email = "magomedrasulisaev296@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "black (==25.12.0)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "coverage (==7.13.1)",
    "finnhub-python (==2.4.26)",
    "flake8 (==7.3.0)",
    "iniconfig (==2.3.0)",
    "isort (==7.0.0)",
    "librt (==0.7.8)",
    "mccabe (==0.7.0)",
    "mypy (==1.19.1)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pandas-stubs (==2.3.3.260113)",
    "pathspec (==1.0.3)",
    "platformdirs (==4.5.1)",
    "pluggy (==1.6.0)",
    "pycodestyle (==2.14.0)",
    "pyflakes (==3.4.0)",
    "pygments (==2.19.2)",
    "pytest (==9.0.2)",
    "pytest-cov (==7.0.0)",
    "pytokens (==0.3.0)",
    "types-pytz (==2025.2.0.20251108)",
    "types-requests (==2.32.4.20260107)",
    "typing-extensions (==4.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
